samples/_failures_safe/1761376507_b5bca2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a875ab5f.c: In function ‘main’:
./samples/SAFE/__tmp_a875ab5f.c:161:9: error: expected declaration or statement at end of input
  161 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_a875ab5f.c:161:9: error: expected declaration or statement at end of input
